syntax = "proto3";

package auth.v1;

import "google/api/annotations.proto";

option go_package = "github.com/anfastk/mergespace/contracts/gen/go/proto/auth/v1;authv1";

message InitiateSignupRequest {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  string password = 4;
}

message InitiateSignupResponse {
  string message = 1;
  string temp_id = 2; }

service AuthService {
  rpc InitiateSignup(InitiateSignupRequest) returns (InitiateSignupResponse){
    option (google.api.http) = {
    post: "/api/v1/auth/signup"
    body: "*"
    };
  }
}